force-app/main/default/objects/Consent_Template__c/Consent_Template__c.object-meta.xml
<CustomObject>
    <description>To maintain Consent Template</description>
    <label>Consent Template</label>
    <nameField>
        <displayFormat>C-{YY}{MM}{DD}-{000}</displayFormat>
        <label>Consent Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consent Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>