force-app/main/default/objects/Consent_Template__c/fields/Template_Body__c.field-meta.xml
<CustomField>
    <fullName>Template_Body__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Template Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>