force-app/main/default/objects/Consent_Template__c/fields/Template_Body_II__c.field-meta.xml
<CustomField>
    <fullName>Template_Body_II__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Template Body II</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>