force-app/main/default/objects/Consent_Template__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Template Name</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>