force-app/main/default/objects/Consent_Template__c/fields/Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Template_Type__c</fullName>
    <label>Template Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Market Consent</fullName>
            </value>
            <value>
                <fullName>PDPA</fullName>
            </value>
            <value>
                <fullName>OneConsent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>