force-app/main/default/objects/Consent_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Template_Name__c</columns>
    <columns>Template_Type__c</columns>
    <columns>Template_Mode__c</columns>
    <columns>Template_Language__c</columns>
    <columns>Template_Version__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>